--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,12 @@ font-size: 30px;
 }
 
 #l1 {
-    display: flex;
-    justify-content:flex-start;
+display: flex;
+justify-content:flex-start;
 }
 
 #r1 {
-    align-items: flex-end;
+align-items: flex-end;
 }
 
 .content {
@@ -64,8 +64,24 @@ font-size: 30px;
 }
 
 #t {
-    margin-left: 3mm;
-    vertical-align:top;
-    font-size: 25;
-    align-self: flex-start;
+margin-left: 3mm;
+vertical-align:top;
+font-size: 25;
+align-self: flex-start;
+}
+
+.contacts{
+margin-left: 20mm;
+display:flex;
+align-items: center;
+align-content: space-between;
+row-gap: 200px;
+column-gap: 50px;
+}
+
+.contacts a{
+margin-left: 3mm;
+align-items: flex-start;
+justify-content: center;
+font-size: 30px;
 }
